# myds-gen

./: .env.example  .gitignore  .gitmodules  README.md  example-api.ipynb  example.ipynb  main.py  marimo.py  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  streamlit.py  tailwind.config.ts  tsconfig.json
api/: index.py  requirements.txt
app/: layout.tsx  page.tsx
app/api/test/: route.ts
app/components/: LiveEditor.tsx
app/preview/: generatedComponent.tsx  page.tsx
data/components/: build_component_vector.py  comp_vector.json  component_vector.pq  extract.py  myds.json
data/foundation/: colour.md  design_doc_min.md  extract.py
data/icons/: build_icon_vector.py  icon_vector.pq
examples/: example-api.ipynb  example.ipynb
src/: api.py  myds_gen.py
src/stages/: build_context.py  component_generation.py  component_generation_iterate.py  design.py  design_iterate.py  generation_validation.py
src/util/: api_schema.py  langchain_schema.py  model_map.py  output_schema.py  rag.py
util/: myds_gen.py
util/stages/: build_context.py  component_generation.py  component_generation_iterate.py  design.py  design_iterate.py  generation_validation.py
util/util/: output_schema.py  rag.py
