[project]
name = "myds-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "google-genai>=1.3.0",
    "ipykernel>=6.29.5",
    "marimo>=0.11.9",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.7",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
