[project]
name = "myds-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.23",
    "langchain-google-genai>=2.1.2",
    "langgraph>=0.3.25",
    "numpy>=2.2.6",
    "pydantic>=2.10.6",
    "uvicorn[standard]>=0.34.0",
]
